@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.372 2006/07/07 14:36:04 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.373 2006/07/13 13:53:32 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -88,6 +88,10 @@ PH/14 In the default configuration, change the use of "message" in ACL warn
 
 PH/15 Diagnose a filter syntax error for "seen", "unseen", or "noerror" if not
       not followed by a command (e.g. "seen endif").
+
+PH/16 Recognize SMTP codes at the start of "message" in ACLs and after :fail:
+      and :defer: in a redirect router. Add forbid_smtp_code to suppress the
+      latter.
 
 
 Exim version 4.62
